# Resume-Demo

./: CNN & Tabular Neural Network Predictions.ipynb  README.md  Readme.md  Unlabelled Supervised Machine Learning.ipynb
Finance Management App/finance-copilot/: eslint.config.js
Finance Management App/finance-copilot/src/: App.tsx
Finance Management App/finance-copilot/src-tauri/: tauri.conf.json
Finance Management App/training/: 01_prepare_dataset.py  02_train_qlora.py
Financial Prediction/PersonalFinanceApp/: FRONTEND_IMPROVEMENTS.md  LAUNCH_LOCAL.md  MANUAL_SETUP_WSL.md  README.md  REFACTORED_ARCHITECTURE.md  REFACTOR_SUMMARY.md  SETUP.md  docker-compose.yml  test_api.py  test_fixes.py  test_integration.py
Financial Prediction/PersonalFinanceApp/StockPredictionModel/: ASXListedCompanies.csv  FIXES_SUMMARY.md  FinanceDataCleaning.py  README.md  cleanup.py  config.py  debug_data.py  diagnose_training.py  enhanced_model.py  feature_engineering.py  incremental_data_collector.py  requirements.txt  retrain_model.py  retrain_model_fixed.py  test_fixes.py  test_imports.py  test_logging.py  test_model.py  test_simple_fix.py  yahoo_http.py
finance-copilot/: index.html  package-lock.json  package.json  tailwind.config.ts
finance-copilot/src/: index.css
finance-copilot/src-tauri/: Cargo.toml
finance-copilot/src-tauri/src/: lib.rs  main.rs  mcp.rs  models.rs
training/: .gitignore  00_fetch_abs_data.py  01_generate_synthetic_csv.py  03_merge_quantize.sh  04_evaluate.py  requirements.txt
training/configs/: qlora_3b.yaml  qlora_7b.yaml
(+11186 files in other folders)
